# pycon-italia-2024-python

./: README.md  pyproject.toml
what/: __init__.py
