[tool.poetry]
name = "what"
version = "0.1.0"
description = "why are you using this"
authors = ["Bryce Beagle <first dot last at gmail dot com"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
